--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "build":"netlify deploy --prod"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -26,7 +27,10 @@
     "mongoose": "^6.5.2",
     "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
-    "nodemailer": "^6.7.8"
+    "netlify-cli": "^17.33.0",
+    "netlify-lambda": "^2.0.16",
+    "nodemailer": "^6.7.8",
+    "serverless-http": "^3.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
